# edu-tutor-rag

./: .gitignore  README.md  pyproject.toml
data/raw_data/السادس ابتدائي/Français/: cours-A-as-a-6eme-primaire-1.txt  cours-Ce-se-6eme-primaire-1.txt  cours-Ces-ses-6eme-primaire-1.txt  cours-Cest-sest-6eme-primaire-1.txt  cours-Construction-de-la-phrase-6eme-primaire-1.txt  cours-Court-et-ses-homonymes-6eme-primaire-1.txt  cours-Distinguer-le-groupe-sujet-et-le-groupe-du-verbe-6eme-primaire-1.txt  cours-Distinguer-les-nuances-des-groupes-complement-de-phrase-6eme-primaire-1.txt  cours-Et-es-est-6eme-primaire-1.txt  cours-La-cedille-6eme-primaire-1.txt  cours-La-formation-des-mots-6eme-primaire.txt  cours-La-la-la-las-6eme-primaire-1.txt  cours-La-phrase-6eme-primaire-1.txt  cours-La-preposition-6eme-primaire-1.txt  cours-La-recherche-des-mots-6eme-primaire-1.txt  cours-Laccord-du-participe-passe-6eme-primaire-1.txt  cours-Ladjectif-qualificatif-6eme-primaire-1.txt  cours-Lattribut-du-sujet-6eme-primaire-1.txt  cours-Le-classement-alphabetique-6eme-primaire-1.txt  cours-Le-complement-du-nom-6eme-primaire-1.txt  cours-Le-dictionnaire-6eme-primaire-1.txt  cours-Le-futur-de-lindicatif-6eme-primaire-1.txt  cours-Le-groupe-du-verbe-6eme-primaire-1.txt  cours-Le-groupe-sujet-6eme-primaire-1.txt  cours-Le-nom-6eme-primaire-1.txt  cours-Le-nom-commun-le-genre-masculin-feminin-6eme-primaire-1.txt  cours-Le-nom-propre-nom-commun-ou-adjectif-de-nationalite-6eme-primaire-1.txt  cours-Le-particip-passe-en-e-ou-infinitif-en-er-6eme-primaire-1.txt  (+47 more)
src/config/: mapping.py
(+129 files in other folders)
