[tool.poetry]
package-mode = false
[project]
name = "rag_based_tutor"
version = "0.1.0"
description = "A curriculum-aware AI tutor for Moroccan education"
authors = [
    {name = "ABDELLAH EL BOUCHOUARI"}
]
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
